<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompartirActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:text="@string/Phone_Number"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTelefono"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/email_1"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCorreo"
        app:layout_constraintEnd_toStartOf="@+id/txtCorreo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="sans-serif"
        android:text="@string/confirm_your_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/text_View"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
        app:layout_constraintStart_toStartOf="@+id/txtCorreo" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/text_view"
        app:layout_constraintBottom_toTopOf="@+id/txtTelefono"
        app:layout_constraintStart_toStartOf="@+id/txtTelefono" />

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="35dp"
        android:text="@string/text_view1"
        app:layout_constraintBottom_toTopOf="@+id/btnCompartir"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/share"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="44dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>